--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -34,6 +34,12 @@ bind "KP_PLUS" "buy taser"
 alias +jumpthrow"+jump;-attack";
 alias -jumpthrow -jump;
 bind c +jumpthrow;
+bind "q" "slot2"
+bind "mouse4" "slot3"
+bind "z" "slot6"
+bind "mouse5" "slot7"
+bind "mouse3" "slot8"
+bind "x" "slot10"
 
 cl_crosshair_drawoutline "1.000000"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
